# Employee-Skill-Project-Performance-Analysis

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build_embedded_templates.py  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.bat  vercel.json
.dvc/: config
.github/workflows/: ci.yml
Employee-Productivity-Analysis-main/: Analysis.ipynb  manage.py  requirements.txt
Employee-Productivity-Analysis-main/ESPPA/: asgi.py  settings.py  urls.py  wsgi.py
Employee-Productivity-Analysis-main/analyzer/: admin.py  forms.py  models.py  urls.py  views.py
Employee-Productivity-Analysis-main/analyzer/migrations/: 0001_initial.py
Employee-Productivity-Analysis-main/models/: linear_regression.pkl  logistic_regression.pkl  random_forest_performance.pkl
Employee-Productivity-Analysis-main/static/: style.css
Employee-Productivity-Analysis-main/templates/: base.html
Employee-Productivity-Analysis-main/templates/analyzer/: analysis.html  dashboard.html  employee_list.html  model_analysis.html  prediction.html  prediction_result.html  profile.html  register.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md
src/: manage.py
src/apps/esppa/: __init__.py  apps.py  urls.py  (+3 more)
src/config/: __init__.py  asgi.py  base.py  dev.py  prod.py  urls.py  wsgi.py
src/core/: asgi.py  deps.py  wsgi.py
src/esppa/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  views.py
src/templates/: base.html
static/: employee_data.csv  employee_data.csv.dvc
(+105 files in other folders)
